301-apim-internal-with-waf-v2-and-ssl/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "tags": {
            "type": "object",
            "defaultValue": "[resourceGroup().tags]",
            "metadata": {
                "description": "Tags for resources"
            }
        },
        "oms_sku": {
            "type": "string",
            "defaultValue": "free",
            "allowedValues": [
                "free",
                "standalone",
                "pernode"
            ],
            "metadata": {
                "description": "Select the SKU for your workspace"
            }
        },
        "dns_zone": {
            "type": "string",
            "defaultValue": "[concat(uniqueString(resourceGroup().id), '.azurequickstart.org')]",
            "metadata": {
                "description": "The name of the DNS zone to be updated.  Must have at least 2 segements, e.g. hostname.org"
            }
        },
        "dns_resource_group": {
            "type": "string",
            "defaultValue": "[resourceGroup().name]",
            "metadata": {
                "description": "The name of the Resource Group where DNS is deployed"
            }
        },
        "vnet_cidr": {
            "type": "string",
            "defaultValue": "10.0.0.0/16",
            "metadata": {
                "description": "VNET CIDR"
            }
        },
        "subnet_waf_cidr": {
            "type": "string",
            "defaultValue": "10.0.0.0/28",
            "metadata": {
                "description": "WAF Subnet CIDR"
            }
        },
        "subnet_apim_cidr": {
            "type": "string",
            "defaultValue": "10.0.1.0/28",
            "metadata": {
                "description": "WAF Subnet CIDR"
            }
        },
        "apim_sku": {
            "type": "string",
            "allowedValues": [
                "Developer",
                "Premium"
            ],
            "defaultValue": "Developer",
            "metadata": {
                "description": "The pricing tier of this API Management service"
            }
        },
        "apim_publisher_email": {
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The email address of the owner of the service"
            }
        },
        "apim_publisher_name": {
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the owner of the service"
            }
        },
        "base64_encoded_pfx_wildcard_certificate": {
            "type": "string",
            "metadata": {
                "description": "The base 64 encoded certificate issued to domain of the proxy custom hostname."
            }
        }
    },
    "variables": {
        "oms_workspace_name": "[concat(resourceGroup().name, '-oms')]",
        "public_ip_name": "[concat(resourceGroup().name, '-pip')]",
        "vnet_name": "[concat(resourceGroup().name, '-vnet')]",
        "apim_nsg_name": "[concat(resourceGroup().name, '-apim-nsg')]",
        "waf_nsg_name": "[concat(resourceGroup().name, '-waf-nsg')]",

        "apim_name": "[concat(resourceGroup().name, '-apim')]",
        "apim_gateway_subdomain": "api",
        "apim_developer_portal_subdomain": "developer-portal",
        "apim_management_subdomain": "management-portal",

        "waf_name": "[concat(resourceGroup().name, '-apg')]",
        "application_insights_name": "[concat(resourceGroup().name, '-app-insights')]"
    },
    "resources": [
        {
            "name": "[variables('oms_workspace_name')]",
            "type": "Microsoft.OperationalInsights/workspaces",
            "apiVersion": "2017-04-26-preview",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "properties": {
                "sku": {
                    "name": "[parameters('oms_sku')]"
                }
            }
        },
        {
            "name": "[variables('application_insights_name')]",
            "type": "Microsoft.Insights/components",
            "apiVersion": "2018-05-01-preview",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "properties": {
                "Application_Type": "web",
                "ApplicationId": "[variables('application_insights_name')]"
            }
        },
        {
            "name": "[variables('public_ip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-09-01",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('apim_nsg_name')]",
            "apiVersion": "2019-09-01",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Client_communication_to_API_Management",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Secure_Client_communication_to_API_Management",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Management_endpoint_for_Azure_portal_and_Powershell",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3443",
                            "sourceAddressPrefix": "ApiManagement",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Dependency_on_Redis_Cache",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6381-6383",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Dependency_on_Azure_SQL",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Sql",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Dependency_for_Log_to_event_Hub_policy",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5671",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "EventHub",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Dependency_on_Redis_Cache_outbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6381-6383",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Dependency_on_Azure_File_Share_for_GIT",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Azure_Infrastructure_Load_Balancer",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 180,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Publish_DiagnosticLogs_And_Metrics",
                        "properties": {
                            "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureMonitor",
                            "access": "Allow",
                            "priority": 185,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "443",
                                "12000",
                                "1886"
                            ]
                        }
                    },
                    {
                        "name": "Connect_To_SMTP_Relay_For_SendingEmails",
                        "properties": {
                            "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 190,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "25",
                                "587",
                                "25028"
                            ]
                        }
                    },
                    {
                        "name": "Authenticate_To_Azure_Active_Directory",
                        "properties": {
                            "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureActiveDirectory",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ]
                        }
                    },
                    {
                        "name": "Dependency_on_Azure_Storage",
                        "properties": {
                            "description": "APIM service dependency on Azure Blob and Azure Table Storage",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Publish_Monitoring_Logs",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Deny_All_Internet_Outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Deny",
                            "priority": 999,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('waf_nsg_name')]",
            "apiVersion": "2019-09-01",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
            ],
            "properties": {
                "securityRules": [
                    {
                        "name": "Inbound_Microsoft_Traffic_WAF_V2",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound_Subnet_only",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnet_waf_cidr')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound_AzureLoadBalancer",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 151,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound_Deny_all",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 152,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-09-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('vnet_name')]",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apim_nsg_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('waf_nsg_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('vnet_cidr')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "waf",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_waf_cidr')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('waf_nsg_name'))]"
                            }
                        }
                    },
                    {
                        "name": "apim",
                        "properties": {
                            "addressPrefix": "[parameters('subnet_apim_cidr')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apim_nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-01-01",
            "name": "[variables('apim_name')]",
            "type": "Microsoft.ApiManagement/service",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet_name'))]"
            ],
            "sku": {
                "name": "[parameters('apim_sku')]",
                "capacity": 1
            },
            "properties": {
                "publisherEmail": "[parameters('apim_publisher_email')]",
                "publisherName": "[parameters('apim_publisher_name')]",
                "virtualNetworkType": "Internal",
                "hostnameConfigurations": [
                    {
                        "type": "Proxy",
                        "hostName": "[concat(variables('apim_gateway_subdomain'), '.', parameters('dns_zone'))]",
                        "encodedCertificate": "[parameters('base64_encoded_pfx_wildcard_certificate')]",
                        "negotiateClientCertificate": false,
                        "defaultSslBinding": true
                    },
                    {
                        "type": "DeveloperPortal",
                        "hostName": "[concat(variables('apim_developer_portal_subdomain'), '.', parameters('dns_zone'))]",
                        "encodedCertificate": "[parameters('base64_encoded_pfx_wildcard_certificate')]",
                        "negotiateClientCertificate": false
                    },
                    {
                        "type": "Management",
                        "hostName": "[concat(variables('apim_management_subdomain'), '.', parameters('dns_zone'))]",
                        "encodedCertificate": "[parameters('base64_encoded_pfx_wildcard_certificate')]",
                        "negotiateClientCertificate": false
                    }
                ],
                "virtualNetworkConfiguration": {
                    "subnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet_name'), 'apim')]"
                }
            }
        },
        {
            "type": "Microsoft.ApiManagement/service/loggers",
            "apiVersion": "2019-01-01",
            "name": "[concat(variables('apim_name'), '/app-insights')]",
            "dependsOn": [
                "[resourceId('Microsoft.Insights/components', variables('application_insights_name'))]",
                "[resourceId('Microsoft.ApiManagement/service', variables('apim_name'))]"
            ],
            "properties": {
                "loggerType": "applicationInsights",
                "credentials": {
                    "instrumentationKey": "[reference(variables('application_insights_name')).InstrumentationKey]"
                },
                "isBuffered": true,
                "resourceId": "[resourceId('Microsoft.Insights/components', variables('application_insights_name'))]"
            }
        },
        {
            "apiVersion": "2019-10-01",
            "name": "dns_update",
            "type": "Microsoft.Resources/deployments",
            "resourceGroup": "[parameters('dns_resource_group')]",
            "subscriptionId": "[subscription().subscriptionId]",
            "dependsOn": [
                "[resourceId('Microsoft.ApiManagement/service', variables('apim_name'))]"
            ],
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "parameters": {
                    },
                    "variables": {
                    },
                    "resources": [
                        {
                            "type": "Microsoft.Network/dnszones/a",
                            "name": "[concat(parameters('dns_zone'), '/', variables('apim_gateway_subdomain'))]",
                            "apiVersion": "2018-05-01",
                            "location": "global",
                            "properties": {
                                "TTL": 3600,
                                "ARecords": [
                                    {
                                        "ipv4Address": "[reference(variables('public_ip_name')).ipAddress]"
                                    }
                                ]
                            }
                        },
                        {
                            "type": "Microsoft.Network/dnszones/a",
                            "name": "[concat(parameters('dns_zone'), '/', variables('apim_developer_portal_subdomain'))]",
                            "apiVersion": "2018-05-01",
                            "location": "global",
                            "properties": {
                                "TTL": 3600,
                                "ARecords": [
                                    {
                                        "ipv4Address": "[reference(variables('public_ip_name')).ipAddress]"
                                    }
                                ]
                            }
                        },
                        {
                            "type": "Microsoft.Network/dnszones/a",
                            "name": "[concat(parameters('dns_zone'), '/', variables('apim_management_subdomain'))]",
                            "apiVersion": "2018-05-01",
                            "location": "global",
                            "properties": {
                                "TTL": 3600,
                                "ARecords": [
                                    {
                                        "ipv4Address": "[reference(variables('public_ip_name')).ipAddress]"
                                    }
                                ]
                            }
                        }
                    ]
                }
            }
        },
        {
            "apiVersion": "2019-09-01",
            "name": "[variables('waf_name')]",
            "type": "Microsoft.Network/applicationGateways",
            "location": "[parameters('location')]",
            "tags": "[parameters('tags')]",
            "dependsOn": [
                "[variables('vnet_name')]",
                "[variables('public_ip_name')]",
                "[resourceId('Microsoft.ApiManagement/service', variables('apim_name'))]"
            ],
            "properties": {
                "sku": {
                    "name": "WAF_v2",
                    "tier": "WAF_v2",
                    "capacity": 2
                },
                "gatewayIPConfigurations": [
                    {
                        "name": "appGatewayIpConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets/', variables('vnet_name'), 'waf')]"
                            }
                        }
                    }
                ],
                "sslCertificates": [
                    {
                        "name": "waf-wildcard-certificate",
                        "properties": {
                            "data": "[parameters('base64_encoded_pfx_wildcard_certificate')]"
                        }
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "waf-frontend-ip",
                        "properties": {
                            "PublicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
                            }
                        }
                    }
                ],
                "frontendPorts": [
                    {
                        "name": "waf-frontend-port",
                        "properties": {
                            "Port": 443
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "apim-backend-pool",
                        "properties": {
                            "BackendAddresses": [
                                {
                                    "ipAddress": "[reference(resourceId('Microsoft.ApiManagement/service', variables('apim_name')), '2019-01-01').privateIPAddresses[0]]"
                                }
                            ]
                        }
                    },
                    {
                        "name": "portal-apim-backend-pool",
                        "properties": {
                            "BackendAddresses": [
                                {
                                    "ipAddress": "[reference(resourceId('Microsoft.ApiManagement/service', variables('apim_name')), '2019-01-01').privateIPAddresses[0]]"
                                }
                            ]
                        }
                    },
                    {
                        "name": "management-apim-backend-pool",
                        "properties": {
                            "BackendAddresses": [
                                {
                                    "ipAddress": "[reference(resourceId('Microsoft.ApiManagement/service', variables('apim_name')), '2019-01-01').privateIPAddresses[0]]"
                                }
                            ]
                        }
                    }
                ],
                "backendHttpSettingsCollection": [
                    {
                        "name": "gateway-apim-https",
                        "properties": {
                            "Port": 443,
                            "Protocol": "Https",
                            "CookieBasedAffinity": "Disabled",
                            "hostName": "[concat(variables('apim_gateway_subdomain'), '.', parameters('dns_zone'))]",
                            "probe": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/probes/gateway-apim-https-probe')]"
                            }
                        }
                    },
                    {
                        "name": "portal-apim-https",
                        "properties": {
                            "Port": 443,
                            "Protocol": "Https",
                            "CookieBasedAffinity": "Disabled",
                            "hostName": "[concat(variables('apim_developer_portal_subdomain'), '.', parameters('dns_zone'))]",
                            "probe": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/probes/portal-apim-https-probe')]"
                            }
                        }
                    },
                    {
                        "name": "management-apim-https",
                        "properties": {
                            "Port": 443,
                            "Protocol": "Https",
                            "CookieBasedAffinity": "Disabled",
                            "hostName": "[concat(variables('apim_management_subdomain'), '.', parameters('dns_zone'))]",
                            "probe": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/probes/management-apim-https-probe')]"
                            }
                        }
                    }
                ],
                "httpListeners": [
                    {
                        "name": "gateway-apim-listener",
                        "properties": {
                            "FrontendIPConfiguration": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('waf_name'), 'waf-frontend-ip')]"
                            },
                            "FrontendPort": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('waf_name'), 'waf-frontend-port')]"
                            },
                            "Protocol": "Https",
                            "sslCertificate": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/sslCertificates/waf-wildcard-certificate')]"
                            },
                            "hostName": "[concat(variables('apim_gateway_subdomain'), '.', parameters('dns_zone'))]"
                        }
                    },
                    {
                        "name": "portal-apim-listener",
                        "properties": {
                            "FrontendIPConfiguration": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('waf_name'), 'waf-frontend-ip')]"
                            },
                            "FrontendPort": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('waf_name'), 'waf-frontend-port')]"
                            },
                            "Protocol": "Https",
                            "sslCertificate": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/sslCertificates/waf-wildcard-certificate')]"
                            },
                            "hostName": "[concat(variables('apim_developer_portal_subdomain'), '.', parameters('dns_zone'))]"
                        }
                    },
                    {
                        "name": "management-apim-listener",
                        "properties": {
                            "FrontendIPConfiguration": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('waf_name'), 'waf-frontend-ip')]"
                            },
                            "FrontendPort": {
                                "Id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('waf_name'), 'waf-frontend-port')]"
                            },
                            "Protocol": "Https",
                            "sslCertificate": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways', variables('waf_name'), '/sslCertificates/waf-wildcard-certificate')]"
                            },
                            "hostName": "[concat(variables('apim_management_subdomain'), '.', parameters('dns_zone'))]"
                        }
                    }
                ],
                "requestRoutingRules": [
                    {
                        "Name": "gateway-apim-rule",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('waf_name'), 'gateway-apim-listener')]"
                            },
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('waf_name'), 'apim-backend-pool')]"
                            },
                            "backendHttpSettings": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('waf_name'), 'gateway-apim-https')]"
                            }
                        }
                    },
                    {
                        "Name": "portal-apim-rule",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('waf_name'), 'portal-apim-listener')]"
                            },
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('waf_name'), 'portal-apim-backend-pool')]"
                            },
                            "backendHttpSettings": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('waf_name'), 'portal-apim-https')]"
                            }
                        }
                    },
                    {
                        "Name": "management-apim-rule",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('waf_name'), 'management-apim-listener')]"
                            },
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('waf_name'), 'management-apim-backend-pool')]"
                            },
                            "backendHttpSettings": {
                                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('waf_name'), 'management-apim-https')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "gateway-apim-https-probe",
                        "properties": {
                            "protocol": "Https",
                            "path": "/status-0123456789abcdef",
                            "interval": 30,
                            "timeout": 30,
                            "unhealthyThreshold": 3,
                            "pickHostNameFromBackendHttpSettings": true,
                            "minServers": 0,
                            "match": {
                                "statusCodes": [
                                    "200-399"
                                ]
                            }
                        }
                    },
                    {
                        "name": "portal-apim-https-probe",
                        "properties": {
                            "protocol": "Https",
                            "path": "/signin",
                            "interval": 60,
                            "timeout": 30,
                            "unhealthyThreshold": 3,
                            "pickHostNameFromBackendHttpSettings": true,
                            "minServers": 0,
                            "match": {
                                "statusCodes": [
                                    "200-399"
                                ]
                            }
                        }
                    },
                    {
                        "name": "management-apim-https-probe",
                        "properties": {
                            "protocol": "Https",
                            "path": "/",
                            "interval": 60,
                            "timeout": 30,
                            "unhealthyThreshold": 3,
                            "pickHostNameFromBackendHttpSettings": true,
                            "minServers": 0,
                            "match": {
                                "statusCodes": [
                                    "200-403" // adding range 400-403 is a recommendation from Microsoft for Management API (09/01/2020)
                                ]
                            }
                        }
                    }
                ],
                "webApplicationFirewallConfiguration": {
                    "enabled": true,
                    "firewallMode": "Detection",
                    "ruleSetType": "OWASP",
                    "ruleSetVersion": "3.1"
                }
            },
            "resources": [
                {
                    "type": "providers/diagnosticSettings",
                    "name": "Microsoft.Insights/service",
                    "apiVersion": "2017-05-01-preview",
                    "dependsOn": [
                        "[variables('waf_name')]",
                        "[concat('Microsoft.OperationalInsights/workspaces/', variables('oms_workspace_name'))]"
                    ],
                    "properties": {
                        "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', variables('oms_workspace_name')) ]",
                        "logs": [
                            {
                                "category": "ApplicationGatewayAccessLog",
                                "enabled": true,
                                "retentionPolicy": {
                                    "days": 90,
                                    "enabled": true
                                }
                            },
                            {
                                "category": "ApplicationGatewayPerformanceLog",
                                "enabled": true,
                                "retentionPolicy": {
                                    "days": 90,
                                    "enabled": false
                                }
                            },
                            {
                                "category": "ApplicationGatewayFirewallLog",
                                "enabled": true,
                                "retentionPolicy": {
                                    "days": 90,
                                    "enabled": false
                                }
                            }
                        ],
                        "metrics": [
                            {
                                "category": "AllMetrics",
                                "enabled": true,
                                "retentionPolicy": {
                                    "enabled": false,
                                    "days": 0
                                }
                            }
                        ]
                    }
                }
            ]
        },
        {
            "name": "[concat(variables('apim_name'), '/', 'Microsoft.Insights/service')]",
            "type": "Microsoft.ApiManagement/service/providers/diagnosticSettings",
            "apiVersion": "2015-07-01",
            "dependsOn": [
                "[concat('Microsoft.ApiManagement/service/', variables('apim_name'))]",
                "[concat('Microsoft.OperationalInsights/workspaces/', variables('oms_workspace_name'))]"
            ],
            "properties": {
                "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces', variables('oms_workspace_name'))]",
                "logs": [
                    {
                        "category": "GatewayLogs",
                        "enabled": true
                    }
                ],
                "metrics": [
                    {
                        "category": "Gateway Requests",
                        "enabled": true,
                        "retentionPolicy": {
                            "enabled": false,
                            "days": 0
                        }
                    },
                    {
                        "category": "Capacity",
                        "enabled": true
                    },
                    {
                        "category": "EventHub Events",
                        "enabled": true
                    }
                ]
            }
        }
    ],
    "outputs": {
        "nameServers": {
            "type": "array",
            "value": "[reference(resourceId(parameters('dns_resource_group'), 'Microsoft.Network/dnszones', parameters('dns_zone')), '2018-05-01').nameServers]"
        },
        "publicIp": {
            "type": "string",
            "value": "[reference(variables('public_ip_name')).ipAddress]"
        },
        "application_insights": {
            "type": "string",
            "value": "[reference(variables('application_insights_name')).AppId]"
        }
    }
}
